src/objects/Dev_Question_Obj__c.object
<CustomObject>
    <description>出題する問題を管理するオブジェクトです。
プレフィックス「QU」</description>
    <fields>
        <fullName>Dev_QU_Answer1__c</fullName>
        <description>問題に対する選択肢の1つです。
この項目は必須です。</description>
        <label>選択肢1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_QU_Answer2__c</fullName>
        <description>問題に対する解答を入力します。
入力は必須です。</description>
        <label>選択肢2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_QU_Answer3__c</fullName>
        <description>問題に対する解答を入力します。
入力は必須です。</description>
        <label>選択肢3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_QU_AnswerNum__c</fullName>
        <description>問題に対して何回回答があったかを積み上げる項目です。</description>
        <label>回答数</label>
        <summaryForeignKey>Dev_Answer_Obj__c.Dev_AN_TargetQuestion__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dev_QU_ChoiceNum__c</fullName>
        <defaultValue>if($RecordType.Name = &apos;単一正答&apos;, 1,0)</defaultValue>
        <description>複数回答問題の場合に、選択する回答の数を入力します。</description>
        <inlineHelpText>選択する回答の数を入力してください。
（単一正答の場合は、編集しないでください。）</inlineHelpText>
        <label>選択数</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_QU_Commentary__c</fullName>
        <description>問題の回答をどう導くか、どういう理由で正解なのかを記載します。</description>
        <label>解説</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_QU_CorrectAnswerNum__c</fullName>
        <description>問題に対する回答のうち、正解である回答の数を積み上げます。</description>
        <label>正答数</label>
        <summaryFilterItems>
            <field>Dev_Answer_Obj__c.Dev_AN_isCorrect__c</field>
            <operation>equals</operation>
            <value>○</value>
        </summaryFilterItems>
        <summaryForeignKey>Dev_Answer_Obj__c.Dev_AN_TargetQuestion__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dev_QU_CorrectAnswerRate__c</fullName>
        <description>問題に対してどのくらいの割合で正解しているかを表示します。</description>
        <formula>if(Dev_QU_AnswerNum__c &lt;&gt; 0, Dev_QU_CorrectAnswerNum__c /  Dev_QU_AnswerNum__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>正答率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dev_QU_CorrectAnswer__c</fullName>
        <description>解答に対して、正解を指定します。
入力は必須です。</description>
        <inlineHelpText>正解は選択肢の番号を入力してください。
（複数選択の場合は、カンマ区切りで昇順で入れてください。）</inlineHelpText>
        <label>正解</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_QU_ExaminationMaster__c</fullName>
        <description>問題の属する試験マスタを選択します。</description>
        <label>試験マスタ</label>
        <referenceTo>Dev_ExaminationMaster_Obj__c</referenceTo>
        <relationshipLabel>問題</relationshipLabel>
        <relationshipName>Dev_EM_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dev_QU_QuestionCategory__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>問題のカテゴリを選択するルックアップ項目です。</description>
        <label>問題カテゴリ</label>
        <referenceTo>Dev_QuestionCategory_Obj__c</referenceTo>
        <relationshipLabel>問題</relationshipLabel>
        <relationshipName>Dev_QC_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dev_QU_Question__c</fullName>
        <description>問題出題の際の問題文を入力します。
255文字以内になるように調節してください。</description>
        <label>問題文</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_QU_ReferenceURL__c</fullName>
        <description>参考となるURLを入力する項目です。</description>
        <label>参考URL</label>
        <type>Url</type>
    </fields>
    <label>問題</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dev_QU_Question__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Dev_QU_Answer1__c</columns>
        <columns>Dev_QU_Answer2__c</columns>
        <columns>Dev_QU_Answer3__c</columns>
        <columns>Dev_QU_Answer4__c</columns>
        <columns>Dev_QU_Answer5__c</columns>
        <columns>Dev_QU_Answer6__c</columns>
        <columns>Dev_QU_CorrectAnswer__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>Dev_QU_SalesCloud_View</fullName>
        <columns>NAME</columns>
        <columns>Dev_QU_Question__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Dev_QU_Answer1__c</columns>
        <columns>Dev_QU_Answer2__c</columns>
        <columns>Dev_QU_Answer3__c</columns>
        <columns>Dev_QU_Answer4__c</columns>
        <columns>Dev_QU_Answer5__c</columns>
        <columns>Dev_QU_Answer6__c</columns>
        <columns>Dev_QU_CorrectAnswer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Dev_QU_ExaminationMaster__c</field>
            <operation>contains</operation>
            <value>Sales Cloud</value>
        </filters>
        <label>Sales Cloud</label>
    </listViews>
    <nameField>
        <displayFormat>Question-{00000}</displayFormat>
        <label>問題No</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Dev_MultiAnswer_RecType</fullName>
        <active>true</active>
        <description>複数選択問題を管理します。</description>
        <label>複数正答</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dev_QU_ForDataLoader_RecType</fullName>
        <active>true</active>
        <label>データローダ一括投入用</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dev_SingleAnswer_RecType</fullName>
        <active>true</active>
        <description>正解がひとつだけの問題を管理するレコードタイプです。</description>
        <label>単一正答</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Dev_QU_MultiAnswerCheck</fullName>
        <active>true</active>
        <description>選択肢が間抜けしていないかどうかをチェックします。</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Dev_MultiAnswer_RecType&apos; &amp;&amp;  Dev_QU_Answer6__c &lt;&gt; null &amp;&amp; Dev_QU_Answer5__c = null</errorConditionFormula>
        <errorDisplayField>Dev_QU_Answer5__c</errorDisplayField>
        <errorMessage>選択肢に間抜けがあります。
詰めて入力してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dev_QU_MultiChoiceNumCheck</fullName>
        <active>true</active>
        <description>複数選択問題の場合の、選択数に不正がないかをチェックします。</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Dev_MultiAnswer_RecType&apos; &amp;&amp;  ( Dev_QU_ChoiceNum__c &lt; 2 ||  if( Dev_QU_Answer6__c &lt;&gt; null, Dev_QU_ChoiceNum__c &gt; 6, Dev_QU_ChoiceNum__c &gt; 5) )</errorConditionFormula>
        <errorDisplayField>Dev_QU_ChoiceNum__c</errorDisplayField>
        <errorMessage>選択数が不正です。選択肢の数の範囲で選択してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dev_QU_MultiCorrectAnswerFormatCheck</fullName>
        <active>true</active>
        <description>複数選択した正解のフォーマットをチェックします。</description>
        <errorConditionFormula>AND ( RecordType.DeveloperName = &apos;Dev_MultiAnswer_RecType&apos; , NOT ( REGEX( Dev_QU_CorrectAnswer__c , &apos;([1-6];)*[1-6]&apos; ) ) )</errorConditionFormula>
        <errorDisplayField>Dev_QU_CorrectAnswer__c</errorDisplayField>
        <errorMessage>フォーマットが正しくありません。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dev_QU_MultiCorrectAnswerNumCheck</fullName>
        <active>true</active>
        <description>複数選択した正解の数をチェックします。</description>
        <errorConditionFormula>AND ( RecordType.DeveloperName = &apos;Dev_MultiAnswer_RecType&apos; , NOT ( LEN ( Dev_QU_CorrectAnswer__c ) = 2 *  Dev_QU_ChoiceNum__c - 1 ) )</errorConditionFormula>
        <errorDisplayField>Dev_QU_CorrectAnswer__c</errorDisplayField>
        <errorMessage>選択数と正解数が一致しません。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dev_QU_SingleChoiceNumCheck</fullName>
        <active>false</active>
        <description>レコードタイプが「単一正答」の場合に選択数が1かどうかをチェックします。</description>
        <errorConditionFormula>AND ( RecordType.DeveloperName = &apos;Dev_SingleAnswer_RecType&apos;,  Dev_QU_ChoiceNum__c &lt;&gt; 1 )</errorConditionFormula>
        <errorDisplayField>Dev_QU_ChoiceNum__c</errorDisplayField>
        <errorMessage>選択数は1を指定してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dev_QU_SingleCorrectAnswerNumCheck</fullName>
        <active>true</active>
        <description>単一選択問題の場合に、正解が1つだけかどうかをチェックします。</description>
        <errorConditionFormula>AND ( RecordType.DeveloperName = &apos;Dev_SingleAnswer_RecType&apos;, LEN (  Dev_QU_CorrectAnswer__c ) &lt;&gt; 1 , ISNUMBER ( Dev_QU_CorrectAnswer__c ) )</errorConditionFormula>
        <errorDisplayField>Dev_QU_CorrectAnswer__c</errorDisplayField>
        <errorMessage>フォーマットが正しくありません。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dev_QU_SingleCorrectAnswerNumRangeCheck</fullName>
        <active>true</active>
        <description>単一選択問題の場合に、正解が1つだけかどうかをチェックします。</description>
        <errorConditionFormula>AND ( RecordType.DeveloperName = &apos;Dev_SingleAnswer_RecType&apos;, ISNUMBER( Dev_QU_CorrectAnswer__c ), OR ( VALUE ( Dev_QU_CorrectAnswer__c ) &lt; 0 , VALUE ( Dev_QU_CorrectAnswer__c ) &gt; 4 ) )</errorConditionFormula>
        <errorDisplayField>Dev_QU_CorrectAnswer__c</errorDisplayField>
        <errorMessage>範囲外の数字が選択されています。1～4のいずれかを選択してください。</errorMessage>
    </validationRules>
</CustomObject>